--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
             <div class="container">
                 <div class="row">
                     <div class="header__des">
-                        <h1 class="space"> Beautiful React Templates <span class="purple">for you.</span></h1>
+                        <h1> Beautiful React Templates <span class="purple">for you.</span></h1>
                         <h3 class="space_b">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h3>
                     </div>
                         <div class="wrapper">
-                            <input type="text" placeholder="Your Email Address"/>
+                            <input type="text" placeholder="Your E-mail Address"/>
                                 <button class="btn">Get Started</button>
                         </div>
                         <div class="header__des">
                             <h5 class="gray"> OUR TRUSTED CUSTOMERS</h5>
-                            <figure class="space">
+                            <figure>
                                 <img class="img" src="./assets/custom.png" alt="">
                             </figure>
                         </div>
