--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a href="#pricing" class="menu__link" onclick="closeMenu()">Pricing</a>
                         </li>
                         <li class="menu__list">
-                            <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a>
+                            <a href="#footer" class="menu__link" onclick="closeMenu()">Contact Us</a>
                         </li>
                         <li class="menu__list">
                             <a href="#" class="menu__link" onclick="closeMenu()">Login</a>
@@ -163,9 +163,7 @@
                     <button class="btnq">Learn More</button>
                 </div>
                 <div class="quality__wrapper">
-                    <figure class="quality__img">
                     <img class="hero" src="./assets/hero.png" alt="">
-                    </figure>
                 </div>
             </div>
         </section>
@@ -324,7 +322,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <div class="last__container">
             <div class="last__rows">
                 <div class="last__row">
