--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <i class="fa fa-shield"></i>
                             </div>
                             <div class="feat__subtitle">
-                                <h3>secure</h3>
+                                <h3>Secure</h3>
                                 <p>We strictly only deal with vendors that provide top notch security.</p>
                             </div>
                         </div>
